fix linebreak in content

--- a/src/components/Projects/Tasks/TasksUnderCategory/TasksUnderCategory.module.scss
+++ b/src/components/Projects/Tasks/TasksUnderCategory/TasksUnderCategory.module.scss
@@ -33,7 +33,6 @@
   align-items: flex-start;
 
   &__content {
-    display: flex;
     @include mixins.text-sm;
     white-space: pre-line;
   }
